--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@radix-ui/colors": "^3.0.0",
+    "@uipub/icons": "^0.1.3",
     "@uipub/theme": "^0.1.2",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "next": "15.1.6",
     "react": "^19.0.0",
